# ModESP_v4

./: .gitignore  ACTION_PLAN.md  CLAUDE.md  CLAUDE_TASK_11b.md  CLAUDE_TASK_12a.md  CLAUDE_TASK_13a.md  CMakeLists.txt  README.md  WISHLIST.md  build_firmware.ps1  partitions.csv  project.json  prompt_phase12a.md  sdkconfig.defaults
.github/workflows/: ci.yml
.rules/: _index.md  _meta.md
.rules/context/: references.md  task.md
.rules/core/: architecture.md  constraints.md
.rules/generation/: output.md
.rules/quality/: eval.md
boards/kc868a6/: bindings.json  board.json
components/modesp_aws/: CMakeLists.txt
components/modesp_aws/include/modesp/net/: aws_iot_service.h
components/modesp_aws/src/: aws_iot_service.cpp
components/modesp_core/: CMakeLists.txt
components/modesp_core/include/modesp/: backfill_provider.h  base_module.h  shared_state.h  types.h
components/modesp_core/src/: base_module.cpp  module_manager.cpp  shared_state.cpp
components/modesp_hal/: CMakeLists.txt
components/modesp_hal/src/: driver_manager.cpp  hal.cpp
components/modesp_mqtt/: CMakeLists.txt
components/modesp_mqtt/include/modesp/net/: mqtt_service.h
components/modesp_mqtt/src/: mqtt_service.cpp  ota_handler.cpp
components/modesp_net/: CMakeLists.txt
components/modesp_net/src/: captive_dns.cpp  http_service.cpp  wifi_service.cpp  ws_service.cpp
components/modesp_services/: CMakeLists.txt
components/modesp_services/src/: config_service.cpp  nvs_helper.cpp  persist_service.cpp  system_monitor.cpp
data/: bindings.json  board.json  system_pages.json
data/i18n/: system_en.json
data/www/: app.js  index.html  style.css
data/www/i18n/: de.json  en.json  pl.json
docs/: 01_architecture.md  02_core.md  03_services.md  04_best_practices.md  05_cooling_defrost.md  06_roadmap.md  07_equipment.md  08_webui.md  10_manifest_standard.md  11_protection.md  12_aws_iot.md  CHANGELOG.md  FEATURES.md  FEATURES_UA.md  ModESP_v4_overview_ua.docx  ModESP_v4_user_manual_ua.docx  README.md  business_logic_review.md  controller_spec_v3.docx  controller_spec_v3.txt
docs/archive/: 05_examples.md  07_phase5a_wifi_api.md  08_phase5b_ui_generation.md  09_manifest_specification.md  BUGFIXES_VERIFIED.md  BUGFIXES_original.md  architecture_review.md  modesp_v4_phase4_hal_architecture.md
docs/archive/prompts/: CLAUDE_TASK_11b.md  CLAUDE_TASK_12a.md  CLAUDE_TASK_14.md  CLAUDE_TASK_15.md  CLAUDE_TASK_WEBUI.md  prompt_phase11a.md  prompt_phase11b.md
drivers/ds18b20/include/: ds18b20_driver.h
drivers/ds18b20/src/: ds18b20_driver.cpp
drivers/ntc/src/: ntc_driver.cpp
drivers/pcf8574_relay/src/: pcf8574_relay_driver.cpp
drivers/relay/: manifest.json
drivers/relay/include/: relay_driver.h
drivers/relay/src/: relay_driver.cpp
main/: CMakeLists.txt  Kconfig.projbuild  main.cpp
modules/datalogger/: CMakeLists.txt  manifest.json
modules/datalogger/include/: datalogger_module.h
modules/datalogger/src/: datalogger_module.cpp
modules/defrost/: CMakeLists.txt  manifest.json
modules/defrost/include/: defrost_module.h
modules/defrost/src/: defrost_module.cpp
modules/equipment/: manifest.json
modules/equipment/include/: equipment_module.h
modules/equipment/src/: equipment_module.cpp
modules/lighting/: manifest.json
modules/lighting/i18n/: de.json  en.json  pl.json
modules/lighting/include/: lighting_module.h
modules/lighting/src/: lighting_module.cpp
modules/protection/: manifest.json
modules/protection/i18n/: de.json  en.json  pl.json
modules/protection/include/: protection_module.h
modules/protection/src/: protection_module.cpp
modules/thermostat/: CMakeLists.txt  manifest.json
modules/thermostat/include/: thermostat_module.h
modules/thermostat/src/: thermostat_module.cpp
prompts/: prod_sprint10_webui.md  prod_sprint11_fleet.md  prod_sprint5_security.md  prod_sprint6_display.md  prod_sprint7_testing.md  prod_sprint8_cicd.md  prod_sprint9_features.md  sprint1_session1_1a_delta_broadcasts.md  sprint1_session1_1b_broadcast_tuning.md  sprint1_session1a_design_tokens.md  sprint1_session1b_base_components.md  sprint2_session1_2a_dashboard_layout.md  sprint2_session1_2b_slider_minichart.md  sprint2_session1_3a_debounce_forms.md  sprint2_session1_3b_form_fixes_errors.md  sprint3_session1_4_mobile_ux.md  sprint3_session1_5_http_auth.md  sprint3_session1_6_ota_safety.md  sprint4_session1_7_mqtt_wifi.md  sprint4_session1_8_units_alarm.md  sprint4_session1_9_hw_test.md
tests/host/: CMakeLists.txt  base_module_host.cpp  nvs_helper_host.cpp  shared_state_host.cpp  test_datalogger.cpp  test_defrost.cpp  test_equipment.cpp  test_lighting.cpp  test_protection.cpp
tests/host/mocks/: hal_types_mock.h  host_prefix.h  nvs.h
tools/: create_user_manual.js  generate_ui.py
tools/tests/: conftest.py  test_features.py  test_generator.py  test_hil.py  test_kc868a6.py  test_modules.py
tools/tests/fixtures/: bindings_full.json  valid_relay.json
webui/: package-lock.json  package.json  rollup.config.js
webui/scripts/: deploy.js
webui/src/: App.svelte
webui/src/components/: Card.svelte  Clock.svelte  GroupAccordion.svelte  Layout.svelte  MiniChart.svelte  Toast.svelte  WidgetRenderer.svelte
webui/src/components/widgets/: ApSave.svelte  AuthSave.svelte  ButtonWidget.svelte  ChartWidget.svelte  DatetimeInput.svelte  DefrostToggle.svelte  FirmwareUpload.svelte  IndicatorWidget.svelte  MqttSave.svelte  NumberInput.svelte  PasswordInput.svelte  SelectWidget.svelte  SliderWidget.svelte  StatusText.svelte  TextInput.svelte  TimeSave.svelte  TimezoneSelect.svelte  ToggleWidget.svelte  ValueWidget.svelte  WifiSave.svelte  WifiScan.svelte
webui/src/i18n/: de.js  en.js  pl.js  uiEn.js  uk.js
webui/src/lib/: api.js  chart.js  downsample.js  icons.js  settings.js
webui/src/pages/: BindingsEditor.svelte  Dashboard.svelte  DynamicPage.svelte  ProtectionPage.svelte
webui/src/pages/bindings/: BindingCard.svelte  EquipmentStatus.svelte  OneWireDiscovery.svelte
webui/src/stores/: i18n.js  toast.js  ui.js
webui/src/styles/: tokens.css
(+10 files in other folders)
